website/style/style.css
/*Style for Homeowrk 2*/

@import url(form.css); 

body{
    margin: auto;
}

#head{
    overflow: hidden;
    background-color: dimgrey;
    position: fixed;
    z-index: 1;
    top:0;
    margin-top: none;
    padding: none;
}

#main-body{
    margin-top: 200px;
    margin-right: auto;
    margin-left: auto;
}


.image{
    margin-top: 70px;
    margin-right: auto;
    margin-left: auto;
    text-align: center;
}

#about, #contact{
    border: 5px solid rgb(158, 19, 19);
}

img{
    width: 50%;
}

span{
    font-weight: bold;
    font-style: italic;
    text-decoration: underline;
}

.info{
    text-align: center;
}


footer{
    margin: 20px;
}

.container{
    padding: none;
}

.dropdown-menu .dropdown-item{
    z-index: 1;
}

